# poetry-babel-plugin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
example/: README.md  pyproject.toml
example/example/: __init__.py  __main__.py
example/example/locale/: messages.pot
example/example/locale/cs/LC_MESSAGES/: messages.po
poetry_babel_plugin/: plugin.py
