[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
line_length = 120
profile = 'black'

[tool.poetry]
name = "poetry-babel-plugin"
version = "0.2.0"
description = "Babel plugin for poetry"
authors = ["Stepan Henek <stepan@henek.name>"]
license = "MIT"
classifiers = [
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Topic :: Software Development :: Localization"
]
keywords = ["poetry", "babel"]
documentation = "https://github.com/shenek/poetry-babel-plugin/blob/master/README.md"

[tool.poetry.dependencies]
python = "^3.8"

babel = "^2.10.1"
poetry = "~1.2.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.poetry.plugins]

[tool.poetry.plugins."poetry.plugin"]

[tool.poetry.plugins."poetry.application.plugin"]
babel = "poetry_babel_plugin.plugin:BabelPlugin"
